--- a/_config.yml
+++ b/_config.yml
@@ -25,14 +25,13 @@ title:                 Data Analysis Portfolio
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Hydejack is a boutique Jekyll theme for hackers, nerds, and academics,
-  with a focus on personal sites that are meant to impress.
+  A Data Analysis portfolio by Adam Godfrey
 
 # A shorter description for the sidebar.
-tagline:               Change `tagline` in `_config.yml`
+tagline:               Aspiring Data Analyst, Web Developer and Music Producer
 
 # A list of keywords for your blog
-keywords:              []
+keywords:              [Data Science, Data Analysis, Data Analytics]
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
@@ -76,7 +75,7 @@ permalink:             /:categories/:year-:month-:day-:title/
 
 # Pagination configuration (used by the `blog` layout)
 paginate:              10
-paginate_path:         /:num/
+paginate_path:         /projects/:num/
 
 
 # Theme
