Added coping struggles by treatment and gender

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -36,7 +36,7 @@ author1:
     # youtube:         <string_string_string>
     # vimeo:           <username>
     # vine:            <username>
-    # spotify:         artist/0viWRYzThhmV9QiYGV3J4i
+    spotify:           artist/0viWRYzThhmV9QiYGV3J4i
     # soundcloud:      <username>
     # lastfm:          <username>
     # instagram:       <username>
